# Unity-Settings-Daemon

./: .bzrignore  configure.ac
data/: Makefile.am  gnome-settings-daemon.desktop.in.in  org.gnome.settings-daemon.plugins.gschema.xml.in.in  org.gnome.settings-daemon.plugins.media-keys.gschema.xml.in.in  org.gnome.settings-daemon.plugins.power.gschema.xml.in.in  unity-settings-daemon.pc.in
debian/: changelog  control  libunity-settings-daemon1.symbols  rules  unity-settings-daemon.install  unity-settings-daemon.links  unity-settings-daemon.symbols  unity-settings-daemon.user-session.upstart
debian/patches/: 05_disable_corner_tapping.patch  16_use_synchronous_notifications.patch  43_disable_locale_settings.patch  45_suppress-printer-may-not-be-connected-notification.patch  52_sync_background_to_accountsservice.patch  53_sync_input_sources_to_accountsservice.patch  62_unity_disable_gsd_printer.patch  63_gnome_disable_background_plugin.patch  64_restore_terminal_keyboard_shortcut_schema.patch  90_set_gmenus_xsettings.patch  correct_logout_action.patch  disable_three_touch_tap.patch  fix_broken_user_sounds_permissions.patch  fix_input_switching_on_unity.patch  fix_media_keys_on_unity.patch  fix_screenshots_on_unity.patch  git_keybindings_add_screen_reader_toggle.patch  git_keyboard-Don-t-set-the-XKB-group-switching-option.patch  git_revert_gsd-keygrab.patch  git_revert_remove_automount_helper.patch  git_thumbnail_cleaning_use_less_ios.patch  git_touchpad_scrolling.patch  migrate_metacity_keys.patch  nexus-orientation.patch  revert_background_dropping.patch  series  touchscreen_rotation.patch  ubuntu-fix-desktop-file.patch  ubuntu-lid-close-suspend.patch  ubuntu-lid-open-reset-ideletime.patch  unity-modifier-media-keys.patch
debian/user/: unity-settings-daemon.service
gnome-settings-daemon/: Makefile.am  gnome-settings-manager.c  gnome-settings-plugin-info.c  gnome-settings-plugin-info.h  gsd-idle-monitor-private.h  gsd-idle-monitor.c  gsd-idle-monitor.h  gsd-rr.c  main.c
plugins/: Makefile.am
plugins/automount/: gsd-automount-manager.c  gsd-autorun.c
plugins/background/: gsd-background-manager.c
plugins/color/: gsd-color-manager.c
plugins/common/: Makefile.am  gsd-input-helper.c
plugins/cursor/: Makefile.am  gsd-cursor-manager.c
plugins/housekeeping/: gsd-disk-space.c
plugins/keyboard/: Makefile.am  fcitx.c  fcitx.h  gsd-keyboard-manager.c
plugins/media-keys/: Makefile.am  gsd-media-keys-manager.c  gsd-media-keys-manager.c.orig  shortcuts-list.h
plugins/media-keys/what-did-you-plug-in/: dialog-window.c
plugins/mouse/: gsd-mouse-manager.c
plugins/orientation/: gsd-orientation-manager.c
plugins/power/: Makefile.am  gpm-common.c  gsd-backlight-linux.c  gsd-power-manager.c
plugins/print-notifications/: gsd-print-notifications-manager.c
plugins/screensaver-proxy/: gsd-screensaver-proxy-manager.c
plugins/smartcard/: gsd-smartcard-plugin.c
plugins/updates/: gsd-updates-manager.c
plugins/wacom/: Makefile.am  gsd-wacom-device.c  gsd-wacom-manager.c
plugins/xrandr/: Makefile.am  gsd-xrandr-manager.c
plugins/xsettings/: Makefile.am  gsd-xsettings-gtk.c  gsd-xsettings-manager.c
po/: POTFILES.in  POTFILES.skip
scripts/: 01-usd-migration-monitors-xml.sh
